--- a/requirements.txt
+++ b/requirements.txt
@@ -1,123 +1,1 @@
-alabaster==0.7.12
-ansible==2.9.11
-appnope==0.1.0
-argon2-cffi==20.1.0
-arrow==0.16.0
-async-generator==1.10
-attrs==20.2.0
-aws-lambda-builders==1.1.0
-aws-sam-cli==1.3.2
-aws-sam-translator==1.27.0
-awscli==1.18.140
-awsebcli==3.19.0
-Babel==2.8.0
-backcall==0.2.0
-bcrypt==3.2.0
-beautifulsoup4==4.9.1
-binaryornot==0.4.4
-bleach==3.2.1
-blessed==1.17.10
-boto3==1.14.63
-botocore==1.17.63
-bs4==0.0.1
-cached-property==1.5.2
-cement==2.8.2
-certifi==2020.4.5.2
-cffi==1.14.1
-chardet==3.0.4
-chevron==0.13.1
-click==7.1.2
-colorama==0.4.3
-cookiecutter==1.6.0
-cryptography==3.0
-dateparser==0.7.6
-decorator==4.4.2
-defusedxml==0.6.0
-docker==4.2.2
-docker-compose==1.25.5
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.15.2
-entrypoints==0.3
-Flask==1.0.4
-future==0.16.0
-idna==2.7
-imagesize==1.2.0
-ipykernel==5.3.4
-ipython==7.18.1
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-itsdangerous==1.1.0
-jedi==0.17.2
-Jinja2==2.11.2
-jinja2-time==0.2.0
-jmespath==0.9.5
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.7
-jupyter-console==6.2.0
-jupyter-core==4.6.3
-jupyterlab-pygments==0.1.2
-MarkupSafe==1.1.1
-mistune==0.8.4
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.1
-notebook==6.1.4
-packaging==20.4
-pandocfilters==1.4.2
-paramiko==2.7.2
-parso==0.7.1
-pathspec==0.5.9
-pexpect==4.8.0
-pickleshare==0.7.5
-poyo==0.5.0
-prometheus-client==0.8.0
-prompt-toolkit==3.0.8
-ptyprocess==0.6.0
-pyasn1==0.4.8
-pycparser==2.20
-Pygments==2.7.1
-PyNaCl==1.4.0
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.0
-pytz==2020.1
-PyYAML==5.3.1
-pyzmq==19.0.2
-qtconsole==4.7.7
-QtPy==1.9.0
-regex==2020.9.27
-requests==2.23.0
-rsa==4.5
-s3transfer==0.3.3
-semantic-version==2.5.0
-Send2Trash==1.5.0
-serverlessrepo==0.1.9
-six==1.11.0
-snowballstemmer==2.0.0
-soupsieve==2.0.1
-speedtest-cli==2.1.2
-Sphinx==3.2.1
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
-texttable==1.6.3
-tomlkit==0.5.8
-tornado==6.0.4
-traitlets==5.0.5
-tzlocal==2.1
-urllib3==1.24.3
-wcwidth==0.1.9
-webencodings==0.5.1
-websocket-client==0.57.0
-Werkzeug==1.0.1
-whichcraft==0.6.1
-widgetsnbextension==3.5.1
+jupyter
