--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,12 @@ services :
       POSTGRES_DB: datascience
     restart: always
  
+  mongodb:
+    image: mongo:3-xenial
+    ports:
+      - "27017:27017"
+    restart: always
+
   admin:
     image: adminer
     restart: always
