--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,12 @@ services :
     ports:
       - "27017:27017"
     restart: always
+  
+  redis:
+    image: redis:6-alpine
+    ports:
+      - 6379:6379
+    restart: always
 
   admin:
     image: adminer
