--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -70,6 +70,8 @@ services :
       POSTGRES_PASSWORD: datascience
       POSTGRES_DB: datascience
     restart: always
+    networks:
+      - cluster-network-1
  
   mongodb:
     image: mongo:3-xenial
